src/container/service-mesh/vs-app.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-app
  namespace: todo-app
spec:
  hosts:
  - "todo.apps.cluster-r4clg.r4clg.sandbox1151.opentlc.com"
  gateways:
  - gateway-todo
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: todo
        port:
          number: 8080
